fix layout problems

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,11 @@
   width: 150px;
 }
 
+.App .repository-issues {
+  margin-left: 15px;
+  width: 100%;
+}
+
 .App .repository-issues .issues {
   list-style-type: none;
   border: 1px solid #8427A2;
